adjust tertiary color to ensure proper color contrast

--- a/styles/components/base.css
+++ b/styles/components/base.css
@@ -2,7 +2,7 @@
   :root {
     --primary: rgb(26, 43, 50);
     --secondary: rgb(37, 64, 77);
-    --tertiary: rgb(50, 122, 138);
+    --tertiary: rgb(51, 135, 154);
     --grey: rgb(169, 190, 200);
     --dark-cyan: rgb(52, 195, 190);
     --yellow: rgb(235, 171, 52);
